--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </a>
 
         <div class="company-info">
-            <p>© 2024 HR System. All rights reserved.</p>
+            <p>Pemograman1.Project UTS</p>
             <p>Sistem Informasi Manajemen Karyawan</p>
         </div>
     </div>
